--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "email": "mahamoud-inzoudine@hotmail.fr"
         }
     ],
-    "require": {}
+    "require": {
+      "ext-http": "*"
+    }
 }
